# stack-draft

./: .gitignore  .gitmodules  Makefile
.github/workflows/: main.yml
back/: default.nix
back/src/: CMakeLists.txt  main.cpp  request.cpp  request.hpp
back/src/handlers/: CMakeLists.txt  base.hpp  index.cpp  index.hpp  info.cpp  info.hpp
config/: routerd.json
front/: .babelrc  next.config.js  package-lock.json  package.json  run.js
front/pages/: 404.js  _app.js  _document.js  index.js
front/utils/: event_bus.js
tests/: install.sh  main.py  requirements.txt
tests/t_requests/: main.py
tests/t_selenium/: main.py
tools/: generate_data.py  requirements.txt
